// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket tests first test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <nav
                aria-label="breadcrumb"
              >
                <ol
                  class="breadcrumb"
                >
                  <li
                    class="breadcrumb-item"
                  >
                    <a
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    aria-current="page"
                    class="breadcrumb-item active"
                  >
                    Ticket
                  </li>
                </ol>
              </nav>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="text-weight-bolder text-secondary col"
            >
              <div
                class="subject"
              >
                Subject :
              </div>
              <div
                class="date"
              >
                Das Ticket würde geöffnet :
              </div>
              <div
                class="status"
              >
                Status :
              </div>
            </div>
            <div
              class="text-right col"
            >
              <button
                class="btn btn-dark"
                type="button"
              >
                Schließen Sie die Tickets ein
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            />
          </div>
          <hr />
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            >
              <form
                class=""
              >
                <label
                  class="form-label"
                >
                  Reply
                </label>
                <small
                  class="form-text"
                />
                <textarea
                  class="form-control"
                  name="detail"
                  row="5"
                />
                <div
                  class="text-right mt-3 mb-3"
                >
                  <button
                    class="btn btn-danger"
                    type="submit"
                  >
                    Reply
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      );
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="breadcrumb-item active"
                >
                  Ticket
                </li>
              </ol>
            </nav>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="text-weight-bolder text-secondary col"
          >
            <div
              class="subject"
            >
              Subject :
            </div>
            <div
              class="date"
            >
              Das Ticket würde geöffnet :
            </div>
            <div
              class="status"
            >
              Status :
            </div>
          </div>
          <div
            class="text-right col"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Schließen Sie die Tickets ein
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          />
        </div>
        <hr />
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          >
            <form
              class=""
            >
              <label
                class="form-label"
              >
                Reply
              </label>
              <small
                class="form-text"
              />
              <textarea
                class="form-control"
                name="detail"
                row="5"
              />
              <div
                class="text-right mt-3 mb-3"
              >
                <button
                  class="btn btn-danger"
                  type="submit"
                >
                  Reply
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    );
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Ticket tests handleOnChange 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <nav
                aria-label="breadcrumb"
              >
                <ol
                  class="breadcrumb"
                >
                  <li
                    class="breadcrumb-item"
                  >
                    <a
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    aria-current="page"
                    class="breadcrumb-item active"
                  >
                    Ticket
                  </li>
                </ol>
              </nav>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="text-weight-bolder text-secondary col"
            >
              <div
                class="subject"
              >
                Subject :
              </div>
              <div
                class="date"
              >
                Das Ticket würde geöffnet :
              </div>
              <div
                class="status"
              >
                Status :
              </div>
            </div>
            <div
              class="text-right col"
            >
              <button
                class="btn btn-dark"
                type="button"
              >
                Schließen Sie die Tickets ein
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            />
          </div>
          <hr />
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            >
              <form
                class=""
              >
                <label
                  class="form-label"
                >
                  Reply
                </label>
                <small
                  class="form-text"
                />
                <textarea
                  class="form-control"
                  name="detail"
                  row="5"
                >
                  some value
                </textarea>
                <div
                  class="text-right mt-3 mb-3"
                >
                  <button
                    class="btn btn-danger"
                    type="submit"
                  >
                    Reply
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="breadcrumb-item active"
                >
                  Ticket
                </li>
              </ol>
            </nav>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="text-weight-bolder text-secondary col"
          >
            <div
              class="subject"
            >
              Subject :
            </div>
            <div
              class="date"
            >
              Das Ticket würde geöffnet :
            </div>
            <div
              class="status"
            >
              Status :
            </div>
          </div>
          <div
            class="text-right col"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Schließen Sie die Tickets ein
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          />
        </div>
        <hr />
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          >
            <form
              class=""
            >
              <label
                class="form-label"
              >
                Reply
              </label>
              <small
                class="form-text"
              />
              <textarea
                class="form-control"
                name="detail"
                row="5"
              >
                some value
              </textarea>
              <div
                class="text-right mt-3 mb-3"
              >
                <button
                  class="btn btn-danger"
                  type="submit"
                >
                  Reply
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Ticket tests handleOnSubmit 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <nav
                aria-label="breadcrumb"
              >
                <ol
                  class="breadcrumb"
                >
                  <li
                    class="breadcrumb-item"
                  >
                    <a
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    aria-current="page"
                    class="breadcrumb-item active"
                  >
                    Ticket
                  </li>
                </ol>
              </nav>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="text-weight-bolder text-secondary col"
            >
              <div
                class="subject"
              >
                Subject :
              </div>
              <div
                class="date"
              >
                Das Ticket würde geöffnet :
              </div>
              <div
                class="status"
              >
                Status :
              </div>
            </div>
            <div
              class="text-right col"
            >
              <button
                class="btn btn-dark"
                type="button"
              >
                Schließen Sie die Tickets ein
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            />
          </div>
          <hr />
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            >
              <form
                class=""
              >
                <label
                  class="form-label"
                >
                  Reply
                </label>
                <small
                  class="form-text"
                />
                <textarea
                  class="form-control"
                  name="detail"
                  row="5"
                />
                <div
                  class="text-right mt-3 mb-3"
                >
                  <button
                    class="btn btn-danger"
                    type="submit"
                  >
                    Reply
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="breadcrumb-item active"
                >
                  Ticket
                </li>
              </ol>
            </nav>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="text-weight-bolder text-secondary col"
          >
            <div
              class="subject"
            >
              Subject :
            </div>
            <div
              class="date"
            >
              Das Ticket würde geöffnet :
            </div>
            <div
              class="status"
            >
              Status :
            </div>
          </div>
          <div
            class="text-right col"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Schließen Sie die Tickets ein
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          />
        </div>
        <hr />
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          >
            <form
              class=""
            >
              <label
                class="form-label"
              >
                Reply
              </label>
              <small
                class="form-text"
              />
              <textarea
                class="form-control"
                name="detail"
                row="5"
              />
              <div
                class="text-right mt-3 mb-3"
              >
                <button
                  class="btn btn-danger"
                  type="submit"
                >
                  Reply
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Ticket tests ticket_is_deleted in history 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <nav
                aria-label="breadcrumb"
              >
                <ol
                  class="breadcrumb"
                >
                  <li
                    class="breadcrumb-item"
                  >
                    <a
                      href="/"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    aria-current="page"
                    class="breadcrumb-item active"
                  >
                    Ticket
                  </li>
                </ol>
              </nav>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="text-weight-bolder text-secondary col"
            >
              <div
                class="subject"
              >
                Subject :
              </div>
              <div
                class="date"
              >
                Das Ticket würde geöffnet :
              </div>
              <div
                class="status"
              >
                Status :
              </div>
            </div>
            <div
              class="text-right col"
            >
              <button
                class="btn btn-dark"
                type="button"
              >
                Schließen Sie die Tickets ein
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            />
          </div>
          <hr />
          <div
            class="mt-4 row"
          >
            <div
              class="col"
            >
              <form
                class=""
              >
                <label
                  class="form-label"
                >
                  Reply
                </label>
                <small
                  class="form-text"
                />
                <textarea
                  class="form-control"
                  name="detail"
                  row="5"
                />
                <div
                  class="text-right mt-3 mb-3"
                >
                  <button
                    class="btn btn-danger"
                    type="submit"
                  >
                    Reply
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="breadcrumb-item active"
                >
                  Ticket
                </li>
              </ol>
            </nav>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="text-weight-bolder text-secondary col"
          >
            <div
              class="subject"
            >
              Subject :
            </div>
            <div
              class="date"
            >
              Das Ticket würde geöffnet :
            </div>
            <div
              class="status"
            >
              Status :
            </div>
          </div>
          <div
            class="text-right col"
          >
            <button
              class="btn btn-dark"
              type="button"
            >
              Schließen Sie die Tickets ein
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          />
        </div>
        <hr />
        <div
          class="mt-4 row"
        >
          <div
            class="col"
          >
            <form
              class=""
            >
              <label
                class="form-label"
              >
                Reply
              </label>
              <small
                class="form-text"
              />
              <textarea
                class="form-control"
                name="detail"
                row="5"
              />
              <div
                class="text-right mt-3 mb-3"
              >
                <button
                  class="btn btn-danger"
                  type="submit"
                >
                  Reply
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
